# d_laravel

./: .ack_run.sh  .bowerrc  .env.example  .env.example.production  .env.testing  .eslintrc.js  .gitignore  .gitlab-ci.yml  .npmrc  Makefile.am  README.md  bower.json  cleanup.sh  codeception.yml  composer.json  configure.ac  deploy_production.sh  gulpfile.js  license-header  package.json  phpunit.xml  readme.md  test_server.php  webpack.mix.js
app/Console/: Kernel.php
app/Console/Commands/: SetupTestDb.php
app/Http/: Kernel.php  routes.php
app/Http/Controllers/: Controller.php  HomeController.php
app/Http/Controllers/Auth/: AuthController.php  EmailVerificationController.php  RegisterController.php
app/Http/Middleware/: AuthenticateAndVerify.php
app/Models/: MessageEvents.php  User.php
app/Providers/: AppServiceProvider.php  DebugMailServiceProvider.php
bootstrap/: testing.php
config/: app.php  auth.php  cache.php  database.php  debugbar.php  filesystems.php  mail.php
database/migrations/: 2016_03_19_011649_create_access_keys.php  2016_03_19_121102_create_events_table.php  2016_03_20_155101_create_message_events_table.php  2016_04_20_043454_add_verification_to_users_table.php  2016_10_22_064657_migrate_jobs_queue_to_laravel53.php
resources/assets/sass/: app.scss
resources/assets/sass/starterkit/: starter-kit-additional.scss  starter-kit-customize.scss  tables.scss
resources/javascripts/: app.js
resources/javascripts/common/: _init.js  app.js  index.js  notify.js  simple_ajax.js
resources/javascripts/error/: _error_handler.js  jquery_error_handler.js
resources/javascripts/logged/: index.js  user_logged.js
resources/lang/en/: app.php  registration.php
resources/views/: adminlte_demo.blade.php  home.blade.php  welcome.blade.php
resources/views/auth/: email_not_verified.blade.php  login.blade.php  register.blade.php
resources/views/auth/emails/: password.blade.php
resources/views/auth/passwords/: email.blade.php  reset.blade.php
resources/views/emails/: user-verification.blade.php
resources/views/layouts/: app.blade.php  landing.blade.php
resources/views/pages/box/: simple_box.blade.php  (+1 more)
routes/: web.php
tests/: ExampleTest.php  MigrationsTestCase.php  UsersTest.php  acceptance.suite.yml
tests/_support/: AcceptanceTester.php
tests/_support/_generated/: FunctionalTesterActions.php
tests/acceptance/: LandingCest.php  UsersCest.php
tests/functional/: ExampleTest.php  TestCase.php  TransactionsTestCase.php  UsersCest.php  UsersTest.php
(+11 files in other folders)
